index content and first css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,123 @@
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-  </body>
 
+  <body>
+    <header>
+      <img src="#" alt="Rainydays logo"> <!--the rainydays logo-->
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <button>Search</button>
+      <img src="#" alt="heart icon for favourites">
+      <img src="#" alt="basket icon for shopping cart">
+    </header>
+
+
+    <main>
+
+      <section class="banner">
+        <img src="#" alt="banner image"> <!--should be a background image in CSS-->
+        <p>Weatherproof your adventures</p>
+        <p>Conquer the elements</p>
+        <button><a href="#">Go to shop</a></button>
+      </section>
+
+      <section class="sale">
+        <p>End of season sale</p>
+        <p>Get up to</p>
+        <p>50% OFF</p>
+        <img src="#" alt="man and woman standing on top of a mountain"> <!--should this also be a background image in CSS?-->
+      </section>
+
+      <section class="shop">
+        <p>Shop our latest trends</p>
+        <div class="shop-womens">
+          <img src="#" alt="woman wearing hiking gear">
+          <p>Where style meets durability</p>
+          <button>Shop womens</button>  
+        </div>
+        <div class="shop-mens">
+          <img src="#" alt="man wearing hiking gear">
+          <p>Where durability meets style</p>
+          <button>Shop mens</button>  
+        </div>
+      </section>
+
+      <section class="activity">
+        <div>
+          <img src="#" alt="a woman hiking in the mountains">
+          <p>Hiking</p>
+        </div>
+        <div>
+          <img src="#" alt="four friends running">
+          <p>Running</p>
+        </div>
+        <div>
+          <img src="#" alt="a couple sitting in a canoo">
+          <p>Canooing</p>
+        </div>
+        <div>
+          <img src="#" alt="a man riding a bicycle on a road">
+          <p>Cyckling</p>
+        </div>
+        <div>
+          <img src="#" alt="a couple on a sailboat">
+          <p>Sailing</p>
+        </div>
+        <div>
+          <img src="#" alt="a woman skiing down a mountainside">
+          <p>Skiing</p>
+        </div>
+        <button><a href="#">Browse more</a></button>
+      </section>
+
+    </main>
+
+
+    <footer>
+
+      <section>
+        <img src="#" alt="Rainydays logo">
+      </section>
+
+      <section>
+        <p>Our world</p>
+        <nav>
+          <ul>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </nav>
+      </section>
+
+      <section>
+        <p>Follow us</p>
+        <div>
+          <img src="#" alt="Facebook icon">
+          <p>Facebook</p>
+        </div>
+        <div>
+          <img src="#" alt="Instagram icon">
+          <p>Instagram</p>
+        </div>
+      </section>
+
+      <section>
+        <p>Newsletter</p>
+        <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
+        <p>Join the Rainydays community</p>
+        <button>example@mail.com</button>
+      </section>
+
+    </footer>
+
+
+  </body>
 </html>
