--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The home page for the brand Rainydays">
     <title>Rainydays | Home</title>
-    <link rel="stylesheet" href="#"> <!--general stylesheet-->
-    <link rel="stylesheet" href="#"> <!--header and footer stylesheet-->
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
@@ -16,10 +17,10 @@
       <img src="#" alt="Rainydays logo"> <!--the rainydays logo-->
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="about-us.html">About</a></li>
+          <li><a href="contact-us.html">Contact</a></li>
         </ul>
       </nav>
       <button>Search</button>
@@ -34,7 +35,7 @@
         <img src="#" alt="banner image"> <!--should be a background image in CSS-->
         <p>Weatherproof your adventures</p>
         <p>Conquer the elements</p>
-        <button><a href="#">Go to shop</a></button>
+        <button><a href="shop.html">Go to shop</a></button>
       </section>
 
       <section class="sale">
@@ -49,12 +50,12 @@
         <div class="shop-womens">
           <img src="#" alt="woman wearing hiking gear">
           <p>Where style meets durability</p>
-          <button>Shop womens</button>  
+          <button><a href="shop.html">Shop womens</a></button>  
         </div>
         <div class="shop-mens">
           <img src="#" alt="man wearing hiking gear">
           <p>Where durability meets style</p>
-          <button>Shop mens</button>  
+          <button><a href="shop.html">Shop mens</a></button>  
         </div>
       </section>
 
@@ -83,7 +84,7 @@
           <img src="#" alt="a woman skiing down a mountainside">
           <p>Skiing</p>
         </div>
-        <button><a href="#">Browse more</a></button>
+        <button><a href="shop.html">Browse more</a></button>
       </section>
 
     </main>
@@ -99,9 +100,9 @@
         <p>Our world</p>
         <nav>
           <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="about-us.html">About us</a></li>
+            <li><a href="contact-us.html">Contact us</a></li>
+            <li><a href="faq">FAQ</a></li>
           </ul>
         </nav>
       </section>
@@ -122,7 +123,8 @@
         <p>Newsletter</p>
         <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
         <p>Join the Rainydays community</p>
-        <button>example@mail.com</button>
+        <button>example@mail.com</button> 
+        <!--need this to be a textfield and to have a overlay when pressed-->
       </section>
 
     </footer>
