update banner on index

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <main>
 
       <section class="banner">
-        <p>Weatherproof your adventures</p>
-        <p>Conquer the elements</p>
-        <button><a href="shop.html">Go to shop</a></button>
+        <h1>Weatherproof your adventures</h1>
+        <h2>Conquer the elements</h2>
+        <button class="cta-orange"><a href="shop.html">Go to shop</a></button>
       </section>
 
       <section class="sale">
