updates and comments

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
       </section>
 
       <section class="sale">
-        <p>End of season sale</p>
-        <p>Get up to</p>
-        <p>50% OFF</p>
-        <img src="#" alt="man and woman standing on top of a mountain"> <!--should this also be a background image in CSS?-->
+        <div class="sale-info">
+          <p>End of season sale</p>
+          <p>Get up to</p>
+          <p>50% OFF</p>  
+        </div>
+        <div>
+          <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image"> <!--should this also be a background image in CSS?-->
+        </div>
       </section>
 
       <section class="shop">
