--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The home page for the brand Rainydays">
     <title>Rainydays | Home</title>
+    <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -45,15 +46,15 @@
 
       <section class="banner">
         <h1>Weatherproof your adventures</h1>
-        <h2>Conquer the elements</h2>
+        <h2><span class="underline">Conquer</span> the elements</h2>
         <button class="cta-orange"><a href="shop.html">Go to shop</a></button>
       </section>
-
+      
       <section class="sale">
         <div class="sale-info">
-          <p>End of season sale</p>
-          <p>Get up to</p>
-          <p>50% OFF</p>  
+          <p class="sale-title">End of season <span class="orange">sale</span></p>
+          <p class="sale-text">Get up to</p>
+          <p class="orange sale-percent">50% off</p>  
         </div>
         <div>
           <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image"> <!--should this also be a background image in CSS?-->
@@ -61,45 +62,54 @@
       </section>
 
       <section class="shop">
-        <p>Shop our latest trends</p>
-        <div class="shop-womens">
-          <img src="#" alt="woman wearing hiking gear">
-          <p>Where style meets durability</p>
-          <button><a href="shop.html">Shop womens</a></button>  
-        </div>
-        <div class="shop-mens">
-          <img src="#" alt="man wearing hiking gear">
-          <p>Where durability meets style</p>
-          <button><a href="shop.html">Shop mens</a></button>  
+        <p class="title">Shop our latest trends</p>
+        <div class="shop-section"> 
+          <div class="shop-container">
+            <img src="assets/images/shop-womens.jpg" alt="woman wearing hiking gear" class="shop-image">
+            <div class="shop-container-info">
+              <p>Where style meets durability</p>
+              <button class="cta-orange"><a href="shop.html">Shop womens</a></button>
+            </div>
+          </div>
+          <div class="shop-container">
+            <img src="assets/images/shop-mens.jpg" alt="man wearing hiking gear" class="shop-image">
+            <div class="shop-container-info">
+              <p>Where durability meets style</p>
+              <button class="cta-orange"><a href="shop.html">Shop mens</a></button>  
+            </div>
+          </div>  
         </div>
       </section>
 
       <section class="activity">
-        <div>
-          <img src="#" alt="a woman hiking in the mountains">
-          <p>Hiking</p>
+        <p class="title">Shop by activity</p>
+        <div class="activity-section">
+          <div class="activity-container">
+            <img src="assets/images/hiking.jpg" alt="a woman hiking in the mountains" class="activity-image">
+            <p class="activity-button">Hiking</p>
+          </div>
+          <div class="activity-container">
+            <img src="assets/images/running.jpg" alt="four friends running" class="activity-image">
+            <p class="activity-button">Running</p>
+          </div>
+          <div class="activity-container">
+            <img src="assets/images/canooing.jpg" alt="a couple sitting in a canoo" class="activity-image">
+            <p class="activity-button">Canooing</p>
+          </div>
+          <div class="activity-container">
+            <img src="assets/images/cyckling.jpg" alt="a man riding a bicycle on a road" class="activity-image">
+            <p class="activity-button">Cyckling</p>
+          </div>
+          <div class="activity-container">
+            <img src="assets/images/sailing.jpg" alt="a couple on a sailboat" class="activity-image">
+            <p class="activity-button">Sailing</p>
+          </div>
+          <div class="activity-container">
+            <img src="assets/images/skiing.jpg" alt="a woman skiing down a mountainside" class="activity-image">
+            <p class="activity-button">Skiing</p>
+          </div>
         </div>
-        <div>
-          <img src="#" alt="four friends running">
-          <p>Running</p>
-        </div>
-        <div>
-          <img src="#" alt="a couple sitting in a canoo">
-          <p>Canooing</p>
-        </div>
-        <div>
-          <img src="#" alt="a man riding a bicycle on a road">
-          <p>Cyckling</p>
-        </div>
-        <div>
-          <img src="#" alt="a couple on a sailboat">
-          <p>Sailing</p>
-        </div>
-        <div>
-          <img src="#" alt="a woman skiing down a mountainside">
-          <p>Skiing</p>
-        </div>
-        <button><a href="shop.html">Browse more</a></button>
+        <button class="cta-blue"><a href="shop.html">Browse more</a></button>
       </section>
 
     </main>
