styling of the footer

--- a/index.html
+++ b/index.html
@@ -116,39 +116,53 @@
 
 
     <footer>
-
       <section>
-        <img src="#" alt="Rainydays logo">
+        <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
       </section>
 
-      <section>
-        <p>Our world</p>
-        <nav>
-          <ul>
-            <li><a href="about-us.html">About us</a></li>
-            <li><a href="contact-us.html">Contact us</a></li>
-            <li><a href="faq">FAQ</a></li>
-          </ul>
-        </nav>
-      </section>
-
-      <section>
-        <p>Follow us</p>
+      <section class="our-world">
         <div>
-          <img src="#" alt="Facebook icon">
-          <p>Facebook</p>
+          <p>Our world</p>
         </div>
         <div>
-          <img src="#" alt="Instagram icon">
+          <nav>
+            <ul>
+              <li><a href="about-us.html">About us</a></li>
+              <li><a href="contact-us.html">Contact us</a></li>
+              <li><a href="faq">FAQ</a></li>
+            </ul>
+          </nav>  
+        </div>
+      </section>
+
+      <section class="follow-us">
+        <div>
+          <p>Follow us</p>
+        </div>
+        <div class="social-media">
+          <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
+          <p>Facebook</p>
+        </div>
+        <div class="social-media">
+          <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
           <p>Instagram</p>
         </div>
       </section>
 
-      <section>
-        <p>Newsletter</p>
-        <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
-        <p>Join the Rainydays community</p>
-        <button>example@mail.com</button> 
+      <section class="newsletter">
+        <div>
+          <p>Newsletter</p>
+        </div>
+        <div class="newsletter-grid">
+          <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
+        </div>
+        <div>
+          <p>Join the Rainydays community!</p>
+          <div class="newsletter-mail">
+            <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
+            <img src="assets/icons/vector-icon.png" class="newsletter-button">
+          </div>
+        </div>
         <!--need this to be a textfield and to have a overlay when pressed-->
       </section>
 
