content and styling for the shop page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
-
   <body>
+
     <header>
       <section>
         <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
@@ -160,10 +160,9 @@
           <p>Join the Rainydays community!</p>
           <div class="newsletter-mail">
             <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png" class="newsletter-button">
+            <img src="assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
           </div>
         </div>
-        <!--need this to be a textfield and to have a overlay when pressed-->
       </section>
 
     </footer>
