content on about us page

--- a/shop.html
+++ b/shop.html
@@ -58,7 +58,7 @@
           <div class="jacket-info">
             <p>Xplorer fleece jacket</p>
             <p>A warm and comfortable fleece made to breath, making you ready for any outdoor activity</p>
-            <p class="orange">NOK 1 499</p>
+            <p class="orange">nok 1 499</p>
           </div>
         </div>
         </a>
@@ -70,7 +70,7 @@
           <div class="jacket-info">
             <p>RunnerPluss jacket</p>
             <p>A lightweight runner jacket made from breathable materials and with a detachable hood</p>
-            <p class="orange">NOK 999</p>
+            <p class="orange">nok 999</p>
           </div>
         </div>
 
@@ -81,7 +81,7 @@
           <div class="jacket-info">
             <p>RacerPro cross-country jacket</p>
             <p>A jacket perfect for skiing with its elastic materials, extra padding, and lightweight design</p>
-            <p class="orange">NOK 1 599</p>
+            <p class="orange">nok 1 599</p>
           </div>
         </div>
 
@@ -92,7 +92,7 @@
           <div class="jacket-info">
             <p>Adventurer jacket</p>
             <p>The perfect jacket for extreme adventures, providing maximum protection against rain and wind</p>
-            <p class="orange">NOK 1 499</p>
+            <p class="orange">nok 1 499</p>
           </div>
         </div>
 
@@ -103,7 +103,7 @@
           <div class="jacket-info">
             <p>Softshell explorer jacket</p>
             <p>A lightweight jacket made for long hikes with its breathing capabilities, and fleece inner lining</p>
-            <p class="orange">NOK 999</p>
+            <p class="orange">nok 999</p>
           </div>
         </div>
 
@@ -114,7 +114,7 @@
           <div class="jacket-info">
             <p>Everyday weather jacket</p>
             <p>This jacket is both water- and windproof, making it the perfect companion for long days outside</p>
-            <p class="orange">NOK 1 599</p>
+            <p class="orange">nok 1 599</p>
           </div>
         </div>
 
@@ -125,7 +125,7 @@
           <div class="jacket-info">
             <p>TrackingPro jacket</p>
             <p>This jacket is made to keep you warm and comfortable with its windproof lining and detachable hood</p>
-            <p class="orange">NOK 1 499</p>
+            <p class="orange">nok 1 499</p>
           </div>
         </div>
 
@@ -189,3 +189,4 @@
 
 
   </body>
+</html>
