--- a/contact-us.html
+++ b/contact-us.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/contact-us.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
   <body>
@@ -44,37 +45,65 @@
       <section class="breadcrumbs"></section> 
       <!--need to add the breadcrumbs-->
 
-      <h1>Contact us</h1>
-      <p>Our team is there for you, and will answer all inquirees as soon as possible. Check out our most frequently asked questions, or contact our support to get the help you need.</p>
-      <button>FAQ</button> <!--style it and <a href> to faq.html-->
-      <p>Customer Support: Our dedicated customer support team is here to assist you with any questions or concerns you may have. Whether you need help with sizing, product recommendations, or assistance with your order, we're just a message away.</p>
-      <p>Feedback and Suggestions: We value your feedback and are constantly striving to improve our products and services. If you have any suggestions for how we can better serve you, please don't hesitate to let us know. Your input helps us continue to grow and evolve as a brand.</p>
-      <p>Connect with us: Stay connected with Rainy Days on social media for the latest news, updates, and behind-the-scenes content. Follow us on Facebook and Instagram to join our community of outdoor enthusiasts and adventure seekers.</p>
-      <p>Visit us: If you're in the area, we'd love for you to stop by our store and say hello! Our friendly team is always happy to meet fellow outdoor enthusiasts and share our passion for adventure.</p>
-      <p>No matter how you choose to reach out, rest assured that we're here to help. Your satisfaction is our top priority, and we're committed to providing you with exceptional service and support every step of the way.</p>
-
-      <section>
-        <h2>Customer support</h2>
-        <img src="#" alt="headphones">
-        <p>+47 102 03 040</p>
-        <img src="#" alt="map pin">
-        <p>Rainystreet 1 0180 Oslo</p>
-        <img src="#" alt="envelope">
-        <p>support@rainydays.com</p>
-        <button>Send us a message</button> <!--style it an <a href> to contact-form.html-->
-      </section>
-
-      <section>
-        <h2>Connect</h2>
-        <img src="#" alt="facebook icon">
-        <p>Facebook</p>
-        <img src="#" alt="instagram icon">
-        <p>Instagram</p>
-        <img src="#" alt="newsletter icon">
-        <p>Subscribe to our newsletter</p>
-        <input type="text">
-        <button>Subscribe</button> <!--style it an <a href> to an overlay-->
-      </section>
+      <div class="contact-grid">
+        <div>
+          <section class="contact-us">
+            <h1>Contact us</h1>
+            <p>Our team is there for you, and will answer all inquirees as soon as possible. Check out our most frequently asked questions, or contact our support to get the help you need.</p>
+            <button class="cta-blue">FAQ</button> <!--<a href> to faq.html-->
+            <p><span class="bold">Customer support:</span> Our dedicated customer support team is here to assist you with any questions or concerns you may have. Whether you need help with sizing, product recommendations, or assistance with your order, we're just a message away.</p>
+            <p><span class="bold">Feedback and Suggestions:</span> We value your feedback and are constantly striving to improve our products and services. If you have any suggestions for how we can better serve you, please don't hesitate to let us know. Your input helps us continue to grow and evolve as a brand.</p>
+            <p><span class="bold">Connect with us:</span> Stay connected with Rainy Days on social media for the latest news, updates, and behind-the-scenes content. Follow us on Facebook and Instagram to join our community of outdoor enthusiasts and adventure seekers.</p>
+            <p><span class="bold">Visit us:</span> If you're in the area, we'd love for you to stop by our store and say hello! Our friendly team is always happy to meet fellow outdoor enthusiasts and share our passion for adventure.</p>
+            <p>No matter how you choose to reach out, rest assured that we're here to help. Your satisfaction is our top priority, and we're committed to providing you with exceptional service and support every step of the way.</p>  
+          </section>  
+        </div>
+  
+        <div class="contact-boxes">
+          <section class="customer-support">
+            <div>
+              <h2>Customer support</h2>
+            </div>
+            <div class="support-type">
+              <img src="assets/icons/headset-icon.png" alt="headphones" class="icon">
+              <p>+47 102 03 040</p>  
+            </div>
+            <div class="support-type">
+              <img src="assets/icons/location-icon.png" alt="map pin" class="icon">
+              <p>Rainystreet 1 0180 Oslo</p>  
+            </div>
+            <div class="support-type">
+              <img src="assets/icons/email-icon.png" alt="envelope" class="icon">
+              <p>support@rainydays.com</p>  
+            </div>
+            <div>
+              <button class="cta-blue">Send us a message</button> <!--<a href> to contact-form.html-->
+            </div>
+          </section>
+    
+          <section class="connect">
+            <div>
+              <h2>Connect</h2>
+            </div>
+            <div class="connect-type">
+              <img src="assets/icons/facebook-icon-black.png" alt="facebook icon" class="icon">
+              <p>Facebook</p>  
+            </div>
+            <div class="connect-type">
+              <img src="assets/icons/instagram-icon-black.png" alt="instagram icon" class="icon">
+              <p>Instagram</p>  
+            </div>
+            <div class="connect-type">
+              <img src="assets/icons/download-mail-icon.png" alt="newsletter icon" class="icon">
+              <p>Subscribe to our newsletter</p>  
+            </div>
+            <div class="connect-newsletter">
+              <input type="text" placeholder="mail@example.com" class="connect-input">
+              <button class="cta-blue">Subscribe</button> <!--<a href> to an overlay-->  
+            </div>
+          </section>  
+        </div>  
+      </div>
 
 
 
