--- a/checkout-success.html
+++ b/checkout-success.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
+<body>
   <header>
     <section>
       <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
@@ -40,6 +41,8 @@
 
   <main>
 
+    <section class="breadcrumbs"></section> 
+    <!--need to add the breadcrumbs-->
 
 
   </main>
