--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -11,94 +11,115 @@
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
-  <header>
-    <section>
-      <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
-    </section>
+  <body>
 
-    <section>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../shop.html">Shop</a></li>
-          <li><a href="../about-us.html">About</a></li>
-          <li><a href="../contact-us.html">Contact</a></li>
-        </ul>
-      </nav>  
-    </section>
-
-    <section class="search">
-      <input type="text" class="search-field">
-      <img src="assets/icons/search-icon.png" class="search-icon">
-    </section>
-
-    <section>
-      <img src="assets/icons/heart-icon-white.png" alt="heart icon for favourites" class="header-icons">
-      <img src="assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="header-icons">  
-    </section>
-  </header>
-
-  <main>
-
-
-
-  </main>
-
-
-  <footer>
-    <section>
-      <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
-    </section>
-
-    <section class="our-world">
-      <div>
-        <p>Our world</p>
-      </div>
-      <div>
+    <header>
+      <section>
+        <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
+      </section>
+  
+      <section>
         <nav>
           <ul>
-            <li><a href="../about-us.html">About us</a></li>
-            <li><a href="../contact-us.html">Contact us</a></li>
-            <li><a href="../faq">FAQ</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../shop.html">Shop</a></li>
+            <li><a href="../about-us.html">About</a></li>
+            <li><a href="../contact-us.html">Contact</a></li>
           </ul>
         </nav>  
-      </div>
-    </section>
+      </section>
+  
+      <section class="search">
+        <input type="text" class="search-field">
+        <img src="assets/icons/search-icon.png" class="search-icon">
+      </section>
+  
+      <section>
+        <img src="assets/icons/heart-icon-white.png" alt="heart icon for favourites" class="header-icons">
+        <img src="assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="header-icons">  
+      </section>
+    </header>
+  
+    <main>
 
-    <section class="follow-us">
-      <div>
-        <p>Follow us</p>
-      </div>
-      <div class="social-media">
-        <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
-        <p>Facebook</p>
-      </div>
-      <div class="social-media">
-        <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
-        <p>Instagram</p>
-      </div>
-    </section>
+      <section class="breadcrumbs"></section> 
+      <!--need to add the breadcrumbs-->
 
-    <section class="newsletter">
-      <div>
-        <p>Newsletter</p>
-      </div>
-      <div class="newsletter-grid">
-        <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
-      </div>
-      <div>
-        <p>Join the Rainydays community!</p>
-        <div class="newsletter-mail">
-          <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
-          <img src="assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
+      <img src="../assets/products/jacket-1.jpg" alt="xplorer fleece jacket">
+      <h1>Xplorer fleece jacket</h1>
+      <h2>Description</h2>
+      <p>Embrace the chill of the evening with the Xplorer Fleece Jacket in the serene shade of evening green. Crafted with renowned quality and expertise, this jacket is designed to keep you warm, comfortable, and stylish no matter the adventure.</p>
+      <p>Made from ultra-soft and cozy fleece fabric, this jacket offers superior warmth without sacrificing breathability. Whether you're hiking through the mountains, camping under the stars, or simply running errands around town, the Xplorer Fleece Jacket is your go-to layer for cooler weather.</p>
+      <p>Featuring a full-zip front closure for easy on and off, along with zippered handwarmer pockets to keep your essentials secure, this jacket combines functionality with timeless style.</p>
+      <h2>Product Details:</h2>
+      <ul>
+        <li>Color: Evening Green</li>
+        <li>Material: 100% recycled polyester fleece</li>
+        <li>Full-zip front closure</li>
+        <li>Zippered handwarmer pockets</li>
+        <li>Regular fit</li>
+        <li>Machine washable</li>
+      </ul>
+      <p>NOK 1499</p>
+      <p>Select size</p> <!--Style this as an input type/scroll down list/select-->
+      <button class="cta-blue">Add to cart</button>
+      <button><img src="../assets/icons/heart-icon-black.png"></button>
+
+    </main>
+  
+    <footer>
+      <section>
+        <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
+      </section>
+  
+      <section class="our-world">
+        <div>
+          <p>Our world</p>
         </div>
-      </div>
-    </section>
-
-  </footer>
-
-
-</body>
+        <div>
+          <nav>
+            <ul>
+              <li><a href="../about-us.html">About us</a></li>
+              <li><a href="../contact-us.html">Contact us</a></li>
+              <li><a href="../faq">FAQ</a></li>
+            </ul>
+          </nav>  
+        </div>
+      </section>
+  
+      <section class="follow-us">
+        <div>
+          <p>Follow us</p>
+        </div>
+        <div class="social-media">
+          <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
+          <p>Facebook</p>
+        </div>
+        <div class="social-media">
+          <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
+          <p>Instagram</p>
+        </div>
+      </section>
+  
+      <section class="newsletter">
+        <div>
+          <p>Newsletter</p>
+        </div>
+        <div class="newsletter-grid">
+          <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
+        </div>
+        <div>
+          <p>Join the Rainydays community!</p>
+          <div class="newsletter-mail">
+            <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
+            <img src="assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
+          </div>
+        </div>
+      </section>
+  
+    </footer>
+  
+  </body>
 </html>
 
 
