--- a/faq.html
+++ b/faq.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rainydays frequently asked questions">
-    <title>Rainydays | FAQ</title>
+    <meta name="description" content="Your checkout at Rainydays was a success">
+    <title>Rainydays | Checkout success</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
+<body>
   <header>
     <section>
       <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
@@ -40,6 +41,8 @@
 
   <main>
 
+    <section class="breadcrumbs"></section> 
+    <!--need to add the breadcrumbs-->
 
 
   </main>
@@ -100,5 +103,3 @@
 
 </body>
 </html>
-
-
