content checkout success

--- a/checkout-success.html
+++ b/checkout-success.html
@@ -44,6 +44,15 @@
     <section class="breadcrumbs"></section> 
     <!--need to add the breadcrumbs-->
 
+    <h1>Your order has been confirmed!</h1>
+    <p>Congratulations! Your order with RainyDays has been successfully confirmed. Thank you for choosing us to be part of your outdoor adventures.</p>
+    <p>Our team is working hard to prepare your order for shipment. You will receive a confirmation email with tracking information once your order has been processed and shipped. </p>
+    <p>Keep an eye on your email inbox for updates about your order, and don´t hesitate to reach out to our customer service team if you have any questions or concerns. We´re here to help!</p>
+    <p>Happy trails!</p>
+    <p>The Rainydays team</p>
+    <img src="assets/icons/ellipse-1.png">
+    <img src="assets/icons/ellipe-1-vector.png">
+
 
   </main>
 
