--- a/checkout.html
+++ b/checkout.html
@@ -44,6 +44,81 @@
     <section class="breadcrumbs"></section> 
     <!--need to add the breadcrumbs-->
 
+    <section>
+      <img src="#"> <!--The numbers from figma as icons or entities??-->
+      <h1>Shopping cart</h1>
+      <img src="assets/products/jacket-1.jpg">
+      <p>Xplorer fleece jacket</p>
+      <ul>
+        <li>Fit: Unisex</li>
+        <li>Color: Evening Green</li>
+        <li>Size: 40</li> <!--Maybe this has to be two ul, so that the text align?-->
+      </ul>
+      <p>Quantity: 1</p> <!--Need the - and + before and after. Html entity? Icons from figma?-->
+      <p>NOK 1 499</p>
+    </section>
+
+    <section>
+      <img src="#"> <!--The numbers from figma as icons or entities??-->
+      <h1>Shipping information</h1>
+      <p>First name</p>
+      <input type="text" placeholder="Name">
+      <p>Last name</p>
+      <input type="text" placeholder="Last name">
+      <p>Date of birth</p>
+      <input type="date" placeholder="DD/MM/YYYY">
+      <p>Phone</p>
+      <input type="tel" placeholder="+47 10203040">
+      <p>Street address</p>
+      <input type="text" placeholder="Rainystreet 1">
+      <p>Postal code</p>
+      <input type="number" placeholder="0000">
+      <p>City</p>
+      <input type="text" placeholder="Oslo">
+      <p>Country</p>
+      <input type="text" placeholder="Norway">
+      <p>Email</p>
+      <input type="email" placeholder="example@mail.com">
+    </section>
+
+    <section>
+      <img src="#"> <!--The numbers from figma as icons or entities??-->
+      <h1>Delivery</h1>
+      <p>Choose delivery method</p>
+      <!--The checkboxes or radio buttons for the delivery options-->
+    </section>
+
+    <section>
+      <img src="#"> <!--The numbers from figma as icons or entities??-->
+      <h1>Payment</h1>
+      <p>Payment method</p>
+      <!--The checkboxes or radio butttons for the payment options-->
+      <img src="assets/icons/visa.png">
+      <img src="assets/icons/mastercard.png">
+      <img src="assets/icons/applepay.png">
+      <img src="assets/icons/paypal.png"> <!--The quality on theese icons sucks! Maybe get them from fontawesome linked from web?-->
+      <p>Visa</p>
+      <p>Card number</p>
+      <input type="number" placeholder="1020 3040 5060 7080">
+      <p>Expiration date</p>
+      <input type="number" placeholder="MM/YY">
+      <p>CVC</p>
+      <input type="number" placeholder="123">
+    </section>
+
+    <section>
+      <img src="#"> <!--The numbers from figma as icons or entities??-->
+      <h1>Order summary</h1>
+      <p>1 x explorer fleece jacket</p>
+      <p>NOK 1499</p>
+      <p>Subtotal</p>
+      <p>NOK 1499</p>
+      <p>Shipping</p>
+      <p>FREE</p>
+      <p>Total</p>
+      <p>NOK 1499</p>
+      <button class="cta-blue">CHECKOUT NOW</button> <!--Need to link this to the checkout-success.html. Add this as a <link> or a <button> Maybe style the uppercase netters in CSS?-->
+    </section>
 
   </main>
 
