content on contact-form.html

--- a/contact-form.html
+++ b/contact-form.html
@@ -44,7 +44,13 @@
     <section class="breadcrumbs"></section> 
     <!--need to add the breadcrumbs-->
 
+    <h1>Send us a message</h1>
+    <p>Have a question, comment, or just want to say hello? We'd love to hear from you!</p>
+    <p>Fill out the form below and we'll get back to you as soon as possible.</p>
+    <p>Your feedback is important to us and we're here to help with anything you need.</p>
+    <!--The contact form! See prewiesly made on the other CA file!-->
 
+    <button class="cta-blue">SUBMIT</button> <!--Link or button?? Style uppercase in CSS?-->
   </main>
 
 
