--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -15,7 +15,7 @@
 
     <header>
       <section>
-        <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
+        <img src="../assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
       </section>
   
       <section>
@@ -35,8 +35,8 @@
       </section>
   
       <section>
-        <img src="assets/icons/heart-icon-white.png" alt="heart icon for favourites" class="header-icons">
-        <img src="assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="header-icons">  
+        <img src="../assets/icons/heart-icon-white.png" alt="heart icon for favourites" class="header-icons">
+        <img src="../assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="header-icons">  
       </section>
     </header>
   
