styling on index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <header>
       <section>
-        <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
+        <a href="index.html">
+          <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
+        </a>
       </section>
 
       <section>
@@ -47,11 +49,11 @@
       <section class="banner">
         <h1>Weatherproof your adventures</h1>
         <h2><span class="underline">Conquer</span> the elements</h2>
-        <button class="cta-orange"><a href="shop.html">Go to shop</a></button>
+        <a href="shop.html" class="cta-orange">Go to shop</a>
       </section>
       
-      <section class="sale">
-        <div class="sale-info">
+      <section class="sale"> <!--why doesnt the info and image align when the they are in a grid and the image has 100%-->
+        <div class="sale-info"> 
           <p class="sale-title">End of season <span class="orange">sale</span></p>
           <p class="sale-text">Get up to</p>
           <p class="orange sale-percent">50% off</p>  
@@ -68,20 +70,20 @@
             <img src="assets/images/shop-womens.jpg" alt="woman wearing hiking gear" class="shop-image">
             <div class="shop-container-info">
               <p>Where style meets durability</p>
-              <button class="cta-orange"><a href="shop.html">Shop womens</a></button>
+              <a href="shop.html" class="cta-orange">Shop womens</a>
             </div>
           </div>
           <div class="shop-container">
             <img src="assets/images/shop-mens.jpg" alt="man wearing hiking gear" class="shop-image">
             <div class="shop-container-info">
               <p>Where durability meets style</p>
-              <button class="cta-orange"><a href="shop.html">Shop mens</a></button>  
+              <a href="shop.html" class="cta-orange">Shop mens</a>
             </div>
           </div>  
         </div>
       </section>
 
-      <section class="activity">
+      <section class="activity"> <!--Should all the activities link to the shop page?-->
         <p class="title">Shop by activity</p>
         <div class="activity-section">
           <div class="activity-container">
@@ -109,7 +111,7 @@
             <p class="activity-button">Skiing</p>
           </div>
         </div>
-        <button class="cta-blue"><a href="shop.html">Browse more</a></button>
+        <a href="shop.html" class="cta-blue">Browse more</a>
       </section>
 
     </main>
@@ -117,7 +119,9 @@
 
     <footer>
       <section>
-        <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
+        <a href="index.html">
+          <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
+        </a>
       </section>
 
       <section class="our-world">
