--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -69,7 +69,7 @@
   
     <footer>
       <section>
-        <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
+        <img src="../assets/icons/rainydays-logo.png" alt="Rainydays logo">
       </section>
   
       <section class="our-world">
@@ -92,11 +92,11 @@
           <p>Follow us</p>
         </div>
         <div class="social-media">
-          <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
+          <img src="../assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
           <p>Facebook</p>
         </div>
         <div class="social-media">
-          <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
+          <img src="../assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
           <p>Instagram</p>
         </div>
       </section>
@@ -112,7 +112,7 @@
           <p>Join the Rainydays community!</p>
           <div class="newsletter-mail">
             <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
+            <img src="../assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
           </div>
         </div>
       </section>
