--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/shop.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
@@ -31,7 +32,7 @@
   
       <section class="search">
         <input type="text" class="search-field">
-        <img src="assets/icons/search-icon.png" class="search-icon">
+        <img src="../assets/icons/search-icon.png" class="search-icon">
       </section>
   
       <section>
@@ -45,25 +46,54 @@
       <section class="breadcrumbs"></section> 
       <!--need to add the breadcrumbs-->
 
-      <img src="../assets/products/jacket-1.jpg" alt="xplorer fleece jacket">
-      <h1>Xplorer fleece jacket</h1>
-      <h2>Description</h2>
-      <p>Embrace the chill of the evening with the Xplorer Fleece Jacket in the serene shade of evening green. Crafted with renowned quality and expertise, this jacket is designed to keep you warm, comfortable, and stylish no matter the adventure.</p>
-      <p>Made from ultra-soft and cozy fleece fabric, this jacket offers superior warmth without sacrificing breathability. Whether you're hiking through the mountains, camping under the stars, or simply running errands around town, the Xplorer Fleece Jacket is your go-to layer for cooler weather.</p>
-      <p>Featuring a full-zip front closure for easy on and off, along with zippered handwarmer pockets to keep your essentials secure, this jacket combines functionality with timeless style.</p>
-      <h2>Product Details:</h2>
-      <ul>
-        <li>Color: Evening Green</li>
-        <li>Material: 100% recycled polyester fleece</li>
-        <li>Full-zip front closure</li>
-        <li>Zippered handwarmer pockets</li>
-        <li>Regular fit</li>
-        <li>Machine washable</li>
-      </ul>
-      <p>NOK 1499</p>
-      <p>Select size</p> <!--Style this as an input type/scroll down list/select-->
-      <button class="cta-blue">Add to cart</button>
-      <button><img src="../assets/icons/heart-icon-black.png"></button>
+      <section class="product-grid">
+        <div>
+          <img src="../assets/products/jacket-1.jpg" alt="xplorer fleece jacket">
+        </div>
+        <div class="product-info">
+          <div class="product-text">
+            <h1>Xplorer fleece jacket</h1>
+            <p class="bold">Descripton</p>
+            <p>Embrace the chill of the evening with the Xplorer Fleece Jacket in the serene shade of evening green. Crafted with renowned quality and expertise, this jacket is designed to keep you warm, comfortable, and stylish no matter the adventure.</p>
+            <p>Made from ultra-soft and cozy fleece fabric, this jacket offers superior warmth without sacrificing breathability. Whether you're hiking through the mountains, camping under the stars, or simply running errands around town, the Xplorer Fleece Jacket is your go-to layer for cooler weather.</p>
+            <p>Featuring a full-zip front closure for easy on and off, along with zippered handwarmer pockets to keep your essentials secure, this jacket combines functionality with timeless style.</p>
+            <p class="bold">Product Details:</p>
+            <ul>
+              <li>Color: Evening Green</li>
+              <li>Material: 100% recycled polyester fleece</li>
+              <li>Full-zip front closure</li>
+              <li>Zippered handwarmer pockets</li>
+              <li>Regular fit</li>
+              <li>Machine washable</li>
+            </ul>  
+          </div>
+          <div class="product-buy">
+            <div>
+              <p class="bold">NOK 1499</p>
+            </div>
+            <div class="product-boxes">
+              <div>
+                <!--Need to style the select input-->
+                <label for="size">Select size:</label>
+                <select name="size" id="size">
+                  <option value="xxsmall">XX-small</option>
+                  <option value="xsmall">X-small</option>
+                  <option value="small">Small</option>
+                  <option value="medium">Medium</option>
+                  <option value="large">Large</option>
+                  <option value="xlarge">X-large</option>
+                  <option value="xxlarge">XX-large</option>
+                </select>        
+              </div>
+              <div class="product-buttons">
+                <a href="../checkout-success.html" class="cta-blue">Add to cart</a>
+                <img src="../assets/icons/heart-icon-black.png" class="favourites-icon">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
     </main>
   
