styling on checkout success

--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -86,7 +86,7 @@
                 </select>        
               </div>
               <div class="product-buttons">
-                <a href="../checkout-success.html" class="cta-blue">Add to cart</a>
+                <a href="../checkout.html" class="cta-blue">Add to cart</a>
                 <img src="../assets/icons/heart-icon-black.png" class="favourites-icon">
               </div>
             </div>
