--- a/shop.html
+++ b/shop.html
@@ -148,7 +148,7 @@
             <ul>
               <li><a href="about-us.html">About us</a></li>
               <li><a href="contact-us.html">Contact us</a></li>
-              <li><a href="faq">FAQ</a></li>
+              <li><a href="faq.html">FAQ</a></li>
             </ul>
           </nav>  
         </div>
